--- a/src/components/generic/button/Button.scss
+++ b/src/components/generic/button/Button.scss
@@ -20,7 +20,7 @@
       border-color: #5f5f5f;
     }
 
-    &.contained.green {
+    &.h5p-hub-contained.h5p-hub-green {
       color: #fff;
       border-color: #2b9684;
       background: #2b9684;
@@ -31,7 +31,7 @@
       }
     }
 
-    &.outlined.green {
+    &.h5p-hub-outlined.h5p-hub-green {
       border-width: 0.125em;
       color: #2b9684;
       border-color: #2b9684;
