--- a/src/components/generic/dropdown/Dropdown.scss
+++ b/src/components/generic/dropdown/Dropdown.scss
@@ -26,7 +26,7 @@
     }
   }
 
-  div.icon-arrow-down {
+  div.h5p-hub-icon-arrow-down {
     position: relative;
     line-height: 1.1em;
     pointer-events: none;
