--- a/src/components/generic/form/ImagePreview.scss
+++ b/src/components/generic/form/ImagePreview.scss
@@ -1,6 +1,6 @@
 .h5p-hub-publish,
 .h5p-hub-registration {
-  .image-preview {
+  .h5p-hub-image-preview {
     width: 4em;
     height: 3em;
     margin-right: 0.5em;
