--- a/src/components/generic/selector/Checkbox/Checkbox.scss
+++ b/src/components/generic/selector/Checkbox/Checkbox.scss
@@ -12,7 +12,7 @@
 }
 
 .h5p-hub-publish , .h5p-hub-registration {
-  .checkbox {
+  .h5p-hub-checkbox {
     font-size: 1.05em;
     padding: 0.5em 0;
     font-weight: bold;
@@ -28,28 +28,24 @@
       outline: none;
     }
 
-    &.parent::after {
+    &.h5p-hub-parent::after {
       @include arrow-right;
     }
 
-    .content {
+    .h5p-hub-content {
       display: flex;
     }
 
-    .content-text {
-      margin-left: 2em;
-    }
-
-    .bold {
+    .h5p-hub-bold {
       font-weight: bold;
     }
 
-    .non-bold {
+    .h5p-hub-non-bold {
       font-weight: normal;
     }
 
-    .content {
-      .icon {
+    .h5p-hub-content {
+      .h5p-hub-icon {
         &::before {
           font-family: 'h5p';
           content: '\e923';
@@ -62,9 +58,9 @@
       }
     }
 
-    &.checked {
-      .content {
-        .icon {
+    &.h5p-hub-checked {
+      .h5p-hub-content {
+        .h5p-hub-icon {
           &::before {
             content: '\e938';
             font-family: 'h5p';
