--- a/src/components/steps/ModalContent.scss
+++ b/src/components/steps/ModalContent.scss
@@ -1,19 +1,19 @@
 .h5p-hub-publish {
-  .dialog-header {
+  .h5p-hub-dialog-header {
     padding: 1.708em 2.292em;
     border-bottom: 1px solid #d5d5d7;
     
-    .dialog-description {
+    .h5p-hub-dialog-description {
       font-size: 0.833em;
       color: #707475;
     }
   }
 
-  .dialog-content {
+  .h5p-hub-dialog-content {
     padding: 1.708em 2.292em;
   }
 
-  .dialog-title {
+  .h5p-hub-dialog-title {
     display: flex;
     justify-content: space-between;
 
