--- a/src/components/steps/Review.scss
+++ b/src/components/steps/Review.scss
@@ -1,5 +1,5 @@
-.h5p-hub-publish .step-content.review {
-  .review-header {
+.h5p-hub-publish .h5p-hub-step-content.h5p-hub-review {
+  .h5p-hub-review-header {
     margin-bottom: 1em;
     color: #363636;
   }
@@ -9,7 +9,7 @@
     margin: 1.25em 0 0 0;
   }
 
-  .definition {
+  .h5p-hub-definition {
     border-bottom: 1px solid #d5d5d5;
     display: flex;
 
@@ -26,16 +26,16 @@
       margin: 0;
       padding: 0.5em 0 0.5em 1em;
     }
-    .img-alt {
+    .h5p-hub-img-alt {
       display: flex;
       align-items: center;
     }
-    .screenshots {
+    .h5p-hub-screenshots {
       margin-bottom: 0.2em;
       &:last-child {
         margin-bottom: 0;
       }
-      .image-preview {
+      .h5p-hub-image-preview {
         font-size: 0.75em;
       }
     }
