--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -33,7 +33,7 @@
   font-size: 18px;
   box-shadow: 0px 0px 20px rgba(0,0,0,0.1);
 
-  .header {
+  .h5p-hub-header {
     padding: 1.5em;
     display: flex;
     align-items: center;
@@ -41,19 +41,19 @@
     box-sizing: border-box;
     border-bottom: 1px solid #d5d5d7;
 
-    .title {
+    .h5p-hub-title {
       font-size: 1.458em;
       flex-grow: 1;
     }
   }
 
-  .step-panel {
+  .h5p-hub-step-panel {
     margin: 2em;
     border-radius: 0.208em;
     border: 1px solid #d5d5d7;
   }
 
-  .step-title {
+  .h5p-hub-step-title {
     color: #1a1a1a;
     font-size: 1.250em;
     font-weight: bold;
@@ -62,17 +62,17 @@
     line-height: normal;
   }
 
-  .step-content {
+  .h5p-hub-step-content {
     padding: 2em;
   }
 
-  .footer {
+  .h5p-hub-footer {
     padding: 0 2em 2em;
     width: 100%;
     box-sizing: border-box;
     position: relative;
 
-    .navigation {
+    .h5p-hub-navigation {
       display: flex;
       
       button:before {
@@ -87,11 +87,11 @@
         top: -0.1em;
       }
 
-      .back:before {
+      .h5p-hub-back:before {
         transform: rotate(0);
       }
 
-      #share-in-process::before {
+      #h5p-hub-share-in-process::before {
         font-family: "h5p";
         font-size: 0.75em;
         content: "\e928";
@@ -99,30 +99,30 @@
         top: 0.5em;
       }
 
-      .next {
+      .h5p-hub-next {
         margin-left: auto;
       }
     }
   }
 
-  .tip-text-field {
+  .h5p-hub-tip-text-field {
     top: 1.5em;
   }
 
-  .share-error {
+  .h5p-hub-hare-error {
     padding: 0 2em 2em;
     text-align: end;
   }
 
-  .bold {
+  .h5p-hub-bold {
     font-weight: bold;
   }
-  .row {
+  .h5p-hub-row {
     display: flex;
     flex-wrap: wrap;
     margin-right: -1em;
 
-    .form-element {
+    .h5p-hub-form-element {
       flex-basis: 100%;
       flex: 1;
       min-width: 17em;
@@ -136,13 +136,13 @@
     }
   }
 
-  .columns {
+  .h5p-hub-columns {
     display: flex;
     @media (max-width: $screen-small) {
       flex-wrap: wrap;
     }
     margin-right: -1em;
-    .column {
+    .h5p-hub-column {
       width: 50%;
       border-right: 1em solid #ffffff;
       @media (max-width: $screen-small) {
@@ -152,7 +152,7 @@
     }
   }
 
-  .sharing-note {
+  .h5p-hub-sharing-note {
     text-align: center;
     color: #707475;
     font-size: 0.833em;
@@ -163,7 +163,7 @@
     box-sizing: border-box;
     padding: 0 8em;
 
-    .icon-info:before {
+    .h5p-hub-icon-info:before {
       font-size: 0.5em;
       display: inline-block;
       margin-right: 1em;
@@ -175,7 +175,7 @@
     }
   }
 
-  .sr-only {
+  .h5p-hub-sr-only {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -187,7 +187,7 @@
     border: 0;
   }
 
-  [class^="icon-"], [class*=" icon-"] {
+  [class^="h5p-hub-icon-"], [class*=" h5p-hub-icon-"] {
     /* use !important to prevent issues with browser extensions that change fonts */
     font-family: 'h5p' !important;
     speak: none;
@@ -202,22 +202,22 @@
     -moz-osx-font-smoothing: grayscale;
   }
 
-  .icon-dropdown:before {	
+  .h5p-hub-icon-dropdown:before {	
     content: "\e925";
   }
-  .icon-info:before {
+  .h5p-hub-icon-info:before {
     content: "\e93c";
   }
-  .icon-thick-arrow:before {
+  .h5p-hub-icon-thick-arrow:before {
     content: "\e91a";
   }
-  .icon-check:before {
+  .h5p-hub-icon-check:before {
     content: "\e933";
   }
-  .icon-close:before {
+  .h5p-hub-icon-close:before {
     content: "\e93a";
   }
-  .icon-plus:before {
+  .h5p-hub-icon-plus:before {
     content: "\e939";
   }
 }
