--- a/src/components/generic/chips/Chips.scss
+++ b/src/components/generic/chips/Chips.scss
@@ -1,4 +1,4 @@
-.h5p-hub-publish .chips-list {
+.h5p-hub-publish .h5p-hub-chips-list {
   display: flex;
   list-style: none;
   padding: 0;
@@ -18,7 +18,7 @@
       padding: 0.75em 0.75em;
       border-color: #dddee2;
       outline: none;
-      .icon-close {
+      .h5p-hub-icon-close {
         font-size: 0.8em;
         margin-left: 2em;
       }
