--- a/src/components/generic/textField/TextField.scss
+++ b/src/components/generic/textField/TextField.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/mixins";
 
 .h5p-hub-registration {
-  .text-field {
+  .h5p-hub-text-field {
     padding: 1.5em;
     overflow: hidden;
     overflow-y: scroll;
@@ -9,19 +9,19 @@
     border-radius: 0.208em;
     @include scrollbar;
 
-    .title {
+    .h5p-hub-title {
       color: #1a1a1a;
       font-size: 1.250em;
       margin-bottom: 0.5em;
     }
 
-    .description {
+    .h5p-hub-description {
       color: #707475;
       font-size: 0.833em;
       margin-bottom: 1.5em;
     }
 
-    .main-text {
+    .h5p-hub-main-text {
       color: #707475;
       font-size: 0.833em;
     }
