--- a/src/components/steps/Optional.scss
+++ b/src/components/steps/Optional.scss
@@ -1,40 +1,40 @@
 @import "../../styles/_variables.scss";
 @import "../../styles/mixins";
 
-.h5p-hub-publish .optional {
-  .keywords {
-    .form-element label {
+.h5p-hub-publish .h5p-hub-optional {
+  .h5p-hub-keywords {
+    .h5p-hub-form-element label {
       margin-bottom: 0.708em;
     }
   }
-  #screenshots {
+  #h5p-hub-screenshots {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    .image-upload-container {
+    .h5p-hub-image-upload-container {
       margin-top: 0.4em;
     }
-    .row {
+    .h5p-hub-row {
       margin-top: 0.5em;
-      .form-element {
+      .h5p-hub-form-element {
         padding: 0;
       }
     }
-    .alt-text {
+    .h5p-hub-alt-text {
       padding: 0.3em;
     }
   }
-  .optional-second-part {
+  .h5p-hub-optional-second-part {
     display: flex;
     @media (max-width: $screen-small) {
       flex-wrap: wrap;
     }
   }
 
-  #long-description {
+  #h5p-hub-long-description {
     height: 10.458em;
   }
-  #short-description {
+  #h5p-hub-short-description {
     height: 6.333em;
   }
 }
