--- a/src/components/generic/form/Element.scss
+++ b/src/components/generic/form/Element.scss
@@ -55,6 +55,7 @@
       font-weight: 500;
       padding: 0;
       text-align: right;
+      align-self: flex-start;
     }
     .h5p-hub-details-row {
       display: flex;
