--- a/src/components/generic/dropdown/Dropdown.scss
+++ b/src/components/generic/dropdown/Dropdown.scss
@@ -12,7 +12,7 @@
     width: 100%;
     -webkit-appearance: none;
     -moz-appearance: none;
-    line-height: normal;
+    line-height: 1.5;
 
     &:disabled {
       background-color: #ededed;
