HFP-3112 Fix dropdown arrow placement for IE11

--- a/src/components/generic/selector/SearchField/SearchField.scss
+++ b/src/components/generic/selector/SearchField/SearchField.scss
@@ -8,8 +8,7 @@
       justify-content: space-between;
 
       .h5p-hub-icon-arrow {
-        position: absolute;
-        right: 1em;
+        margin: 1em;
         font-size: 1.30353em;
         cursor: pointer;
         color: #000000;
