Fix cancel dialog filling screen width in IE11

--- a/src/components/generic/confirmation-dialog/ConfirmationDialog.scss
+++ b/src/components/generic/confirmation-dialog/ConfirmationDialog.scss
@@ -2,7 +2,8 @@
 
   .h5p-hub-cancel-publish-confirmation-modal {
     margin: 2em auto;
-    width: max-content;
+    width: 30em;
+    max-width: 90%;
   
     .h5p-hub-dialog-header {
       padding: 1.708em 2.292em;
