--- a/src/components/generic/selector/SearchFilter/SearchFilter.scss
+++ b/src/components/generic/selector/SearchFilter/SearchFilter.scss
@@ -73,7 +73,7 @@
       .h5p-hub-content {
         padding: 0.3em;
         .h5p-hub-label-text {
-          margin-right: 1em;
+          margin: 0 1em;
         }
       }
       &:focus {
