JI-1958 Use add button for search and css changes

--- a/src/components/generic/selector/disciplineElement/DisciplineElement.scss
+++ b/src/components/generic/selector/disciplineElement/DisciplineElement.scss
@@ -48,6 +48,8 @@
 
     .h5p-hub-content {
       display: flex;
+      align-items: center;
+      margin-left: 0.5em;
     }
 
     .h5p-hub-bold {
