JI-2023 Fixes ui adjustments
Mainly fixes theme styles bleeding through

--- a/src/components/generic/selector/SearchField/SearchField.scss
+++ b/src/components/generic/selector/SearchField/SearchField.scss
@@ -1,6 +1,8 @@
 .h5p-hub-publish {
   .h5p-hub-search-button {
     width: 100%;
+    position: relative;
+
     .h5p-hub-search-field {
       position: relative;
       display: flex;
