Fix missing css class prefix for active step
Fixes "Styling issues #3" in ux review document

--- a/src/components/generic/stepper/Step.scss
+++ b/src/components/generic/stepper/Step.scss
@@ -30,7 +30,7 @@
 
   &.h5p-hub-active {
     color: #20d2b2;
-    .step-icon {
+    .h5p-hub-step-icon {
       border-color: #20d2b2;
       color: #0ea385;
     }
