--- a/src/components/generic/form/ImagePreview.scss
+++ b/src/components/generic/form/ImagePreview.scss
@@ -5,7 +5,9 @@
     height: 3em;
     margin-right: 0.5em;
     display: inline-block;
-    background-size: cover;
     background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: #d0d0d1;
   }
 }
