--- a/src/components/generic/dropdown/Dropdown.scss
+++ b/src/components/generic/dropdown/Dropdown.scss
@@ -4,7 +4,7 @@
   select {
     font-size: 0.917em;
     border-radius: 0.208em;
-    padding: 0.833em;
+    padding: 0.833em 2.334em 0.833em 0.833em;
     color: #313131;
     background-color: #ffffff;
     font-family: "Open Sans", sans-serif;
