--- a/src/components/generic/selector/Checkbox/Checkbox.scss
+++ b/src/components/generic/selector/Checkbox/Checkbox.scss
@@ -1,91 +1,41 @@
-@mixin arrow-right {
-  color: #121212;
-  font-family: 'h5p';
-  content: '\e924';
-  transform: rotate(-90deg);
-  font-style: normal;
-  font-size: 0.7em;
-  display: inline-block;
-  position: absolute;
-  right: 2em;
-  align-self: center;
-}
+.h5p-hub-registration .h5p-hub-checkbox {
+  font-size: 1.05em;
+  padding: 0.5em 0;
+  font-weight: bold;
+  display: flex;
+  cursor: pointer;
+  align-self: start;
+  color: #4d5057;
+  width: 100%;
+  position: relative;
 
-.h5p-hub-publish , .h5p-hub-registration {
+  & > input {
+    visibility: hidden;
+    position: absolute;
+  }
 
-  .h5p-hub-checkbox {
-    font-size: 1.05em;
-    padding: 0.5em 0;
-    font-weight: bold;
-    display: flex;
-    cursor: pointer;
-    align-self: start;
-    color: #4d5057;
-    width: 100%;
-    position: relative;
+  &:focus {
+    box-shadow: 0 0 0.4em 0.01em RGBA(26, 147, 244, 0.7);
+    outline: none;
+  }
 
-    .h5p-hub-checkbox-error-tip {
-      top: 5em;
-      position: absolute;
-      margin-left: 2.5em;
-      z-index: 1;
-    }
+  .h5p-hub-icon:before {
+    font-family: 'h5p';
+    content: '\e923';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1em;
+    margin: 0.4em 0.4em 0 0.4em;
+    margin-right: 1em;
+  }
 
-    &:last-child {
-      .h5p-hub-checkbox-error-tip {
-        top: 2.5em;
-      }
-    }
-
-    &:focus {
-      box-shadow: 0 0 0.4em 0.01em RGBA(26, 147, 244, 0.7);
-      outline: none;
-    }
-
-    &.h5p-hub-parent::after {
-      @include arrow-right;
-    }
-
-    .h5p-hub-content {
-      display: flex;
-    }
-
-    .h5p-hub-bold {
-      font-weight: bold;
-    }
-
-    .h5p-hub-non-bold {
-      font-weight: normal;
-    }
-
-    .h5p-hub-content {
-      .h5p-hub-icon {
-        &::before {
-          font-family: 'h5p';
-          content: '\e923';
-          font-style: normal;
-          font-weight: normal;
-          font-size: 1em;
-          margin: 0.4em 0.4em 0 0.4em;
-          margin-right: 1em;
-        }
-      }
-    }
-
-    &.h5p-hub-checked {
-      .h5p-hub-content {
-        .h5p-hub-icon {
-          &::before {
-            content: '\e938';
-            font-family: 'h5p';
-            font-style: normal;
-            font-weight: normal;
-            font-size: 1em;
-            margin: 0.4em 0.4em 0 0.4em;
-            margin-right: 1em;
-          }
-        }
-      }
-    }
+  &.h5p-hub-checked .h5p-hub-icon:before {
+    content: '\e938';
+    font-family: 'h5p';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1em;
+    margin: 0.4em 0.4em 0 0.4em;
+    margin-right: 1em;
   }
 }
