JI-2149 Adjust color of error message
Fix typo

--- a/src/components/generic/message/Message.scss
+++ b/src/components/generic/message/Message.scss
@@ -13,6 +13,7 @@
     &.h5p-hub-error {
       border-color: #c1494b;
       background-color: #ece0e0;
+      color: #c1494b;
     }
     &.h5p-hub-success {
       border-color: #03a953;
