--- a/src/components/steps/Review.scss
+++ b/src/components/steps/Review.scss
@@ -12,6 +12,7 @@
   .h5p-hub-definition {
     border-bottom: 1px solid #d5d5d5;
     display: flex;
+    border-bottom-color: #e2e5ee;
 
     dt {
       width: 25%;
