--- a/src/components/steps/Success.scss
+++ b/src/components/steps/Success.scss
@@ -4,21 +4,20 @@
     .h5p-hub-step-icon-success {
       font-size: 0.75em;
       border-radius: 50%;
-      border: 0.462em solid #e1e1e1;
+      border: 0.462em solid #609bff;
       width: 3.2em;
       height: 3.2em;
       line-height: 2.276;
       display: inline-block;
       box-sizing: border-box;
-      background: #0ea385;
-      border-color: #20d2b2;
-      color: #fff;
       margin-bottom: 0.667em;
+      background: #186df7;
+      color: #fff;
     }
     .h5p-hub-submitted-text {
-      color: #0ea385;
       margin-bottom: 2.167em;
       font-size: 0.75em;
+      color: #186df7;
     }
     .h5p-hub-content-type {
       letter-spacing: 0.146em;
