--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -25,13 +25,14 @@
 .h5p-hub-publish, .h5p-hub-registration-wrapper  {
   position: relative;
   margin: 2em auto;
-  font-family: 'Open Sans', sans-serif;
   max-width: 1024px;
   border: 1px solid #2c9586;
   border-radius: 0.167em;
   box-sizing: border-box;
-  font-size: 18px;
   box-shadow: 0px 0px 20px rgba(0,0,0,0.1);
+  font-family: Nunito, sans-serif;
+  font-size: 16px;
+  padding-top: 0.25em;
 
   .h5p-hub-header {
     padding: 1.5em;
@@ -40,17 +41,20 @@
     width: 100%;
     box-sizing: border-box;
     border-bottom: 1px solid #d5d5d7;
+    border-bottom-color: #e2e5ee;
 
     .h5p-hub-title {
       font-size: 1.458em;
       flex-grow: 1;
+      color: black;
+      padding-left: 1em;
     }
   }
 
   .h5p-hub-step-panel {
     margin: 2em;
     border-radius: 0.208em;
-    border: 1px solid #d5d5d7;
+    border: 1px solid #e2e5ee;
   }
 
   .h5p-hub-step-title {
@@ -60,6 +64,7 @@
     border-bottom: 1px solid #ccc;
     padding: 1.2em 1.8em;
     line-height: normal;
+    border-bottom-color: #e2e5ee;
   }
 
   .h5p-hub-step-content {
@@ -159,7 +164,6 @@
   .h5p-hub-sharing-note {
     text-align: center;
     color: #707475;
-    font-size: 0.833em;
     width: calc(100% - 4.9em);
     position: absolute;
     top: 0.65em;
@@ -223,6 +227,32 @@
   .h5p-hub-icon-plus:before {
     content: "\e939";
   }
+
+  button {
+    font-size: .917em;
+    border-width: .125em;
+    border-radius: .208em;
+    padding: .833em 1.65em;
+    background: #fff;
+    color: #3c4859;
+    font-family: Nunito, sans-serif;
+    outline: none;
+    transition: all 0.1s;
+
+    &:hover {
+      color: #3c4859;
+      background: #e2e5ee;
+      border-color: #e2e5ee;
+    }
+  }
+}
+
+.h5p-hub-registration-wrapper {
+  border: none;
+}
+
+.h5p-hub-publish {
+  border: 1px solid #e2e5ee;
 }
 
 .h5p-hub-share-error {
