--- a/src/components/Registration/Registration.scss
+++ b/src/components/Registration/Registration.scss
@@ -41,13 +41,14 @@
   .h5p-hub-checkbox {
     margin-top: 1.5em;
     font-weight: normal;
-    font-size: 0.833em;
+    font-size: .917em;
   }
 
   .h5p-hub-register-hub {
     margin-left: 1em;
-    color: #2b9684;
-    border: 2px solid #2b9684;
+    border: 2px solid #186df7;
+    background: #186df7;
+    color: #fff;
 
     &[disabled] {
       color: #92cabf;
