--- a/src/components/steps/Optional.scss
+++ b/src/components/steps/Optional.scss
@@ -7,7 +7,7 @@
       margin-bottom: 0.708em;
     }
   }
-  #h5p-hub-screenshots {
+  #h5p-hub-form-screenshots {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
