--- a/src/components/Registration/Registration.scss
+++ b/src/components/Registration/Registration.scss
@@ -47,12 +47,20 @@
   .h5p-hub-register-hub {
     margin-left: 1em;
     border: 2px solid #186df7;
-    background: #186df7;
+    background-color: #186df7;
     color: #fff;
 
     &[disabled] {
-      color: #92cabf;
-      border-color: #92cabf;
+      color: #aac3ec;
+      border-color: #aac3ec;
+      background-color: white;
+      pointer-events: none;
+    }
+
+    &:hover {
+      background-color: #2e46a4;
+      border-color: #2e46a4;
+      color: white;
     }
   }
 
