--- a/src/components/generic/form/ImageUpload.scss
+++ b/src/components/generic/form/ImageUpload.scss
@@ -14,6 +14,7 @@
       outline: none;
       position: absolute;
       right: 0;
+      padding: 0;
 
       &::before {
         font-size: 0.6em;
