--- a/src/components/generic/selector/CheckboxList/CheckboxList.scss
+++ b/src/components/generic/selector/CheckboxList/CheckboxList.scss
@@ -1,4 +1,33 @@
 .h5p-hub-publish .h5p-hub-checkbox-list {
   list-style: none;
   padding: 0;
+  background-color: #ffffff;
+
+  &.h5p-hub-animate-in-right {
+    animation: move-from-right 0.35s;
+  }
+  &.h5p-hub-animate-in-left {
+    animation: move-from-left 0.35s;
+  }
+}
+@keyframes move-from-right {
+  0% {
+      opacity:0;
+      transform: translateX(50%);
+  }
+  100% {
+      opacity:1;
+      transform: translateX(0);
+    }
+}
+
+@keyframes move-from-left {
+  0% {
+      opacity:0;
+      transform: translateX(-50%);
+  }
+  100% {
+      opacity:1;
+      transform: translateX(0);
+    }
 }
