--- a/src/components/generic/selector/disciplineElement/DisciplineElement.scss
+++ b/src/components/generic/selector/disciplineElement/DisciplineElement.scss
@@ -1,13 +1,10 @@
 @mixin arrow-right {
-  color: #121212;
   font-family: 'h5p';
-  content: '\e924';
-  transform: rotate(-90deg);
+  content: '\e58e';
+  transform: rotate(90deg);
   font-style: normal;
-  font-size: 0.7em;
+  font-size: 1.1em;
   display: inline-block;
-  position: absolute;
-  right: 2em;
   align-self: center;
 }
 
