HFP-3232 Try to align icon

--- a/src/components/generic/selector/SearchField/SearchField.scss
+++ b/src/components/generic/selector/SearchField/SearchField.scss
@@ -6,17 +6,18 @@
     .h5p-hub-search-field {
       position: relative;
       display: flex;
-      align-items: center;
       justify-content: space-between;
 
-        &::before {
-          content: "\e88a";
-          font-family: "h5p";
-          font-style: normal;
-          font-size:2em;
-          margin-left: 0.25em;
-          color: #b7b8ba;
-        }
+      &::before {
+        content: "\e88a";
+        font-family: "h5p";
+        font-style: normal;
+        font-size: 2em;
+        margin-left: 0.25em;
+        color: #b7b8ba;
+        top: 0.23em;
+        position: relative;
+      }
 
       .h5p-hub-icon-arrow {
         margin: 1em;
