--- a/src/components/generic/keywords/Keywords.scss
+++ b/src/components/generic/keywords/Keywords.scss
@@ -7,6 +7,8 @@
       position: absolute;
       right: 4.5em;
       border-radius: 1.5em;
+      padding: 0.5em 1em;
+      margin-right: 0.5em;
       &:focus {
         border-color: #3ba0f2;
       }
