--- a/src/components/generic/selector/SearchField/SearchField.scss
+++ b/src/components/generic/selector/SearchField/SearchField.scss
@@ -14,8 +14,9 @@
         font-family: "h5p";
         font-style: normal;
         font-size: 1em;
-        margin-left: 1em;
+        margin-left: 1.25em;
         color: #b7b8ba;
+        position: absolute;
       }
 
       .h5p-hub-icon-arrow {
@@ -42,7 +43,7 @@
     width: 100%;
     box-sizing: border-box;
     font-size: 1.15em;
-    padding-left: 0.25em;
+    padding-left: 3.044em;
 
     &::placeholder {
       color: #b7b8ba;
