--- a/src/components/generic/selector/SearchFilter/SearchFilter.scss
+++ b/src/components/generic/selector/SearchFilter/SearchFilter.scss
@@ -77,7 +77,7 @@
       .h5p-hub-content {
         padding: 0.3em;
         .h5p-hub-label-text {
-          margin: 0 1em;
+          margin: 0 0.2em 0 1em;
         }
 
         button {
