Fix same width and height for back arrow in disciplines selector
Issue 2 from Hub review april

--- a/src/components/generic/selector/SearchFilter/SearchFilter.scss
+++ b/src/components/generic/selector/SearchFilter/SearchFilter.scss
@@ -41,6 +41,8 @@
       padding: 0.75em;
       margin-right: 1em;
       border-radius: 50%;
+      width: 2.75em;
+      height: 2.75em;
 
       &::before {
         content: "\e937";
