JI-1127 Fix import css

--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import '../styles/font-open-sans.scss';
 @import "../styles/variables";
 
 /*@font-face {
