JI-4380 add missing focus effects and update existing one. refactor buttons

--- a/src/components/generic/form/ImageUpload.scss
+++ b/src/components/generic/form/ImageUpload.scss
@@ -74,6 +74,10 @@
         border-color: #777;
       }
 
+      &:focus {
+        color: #186df7;
+      }
+
       &:before {
         content: "+";
         font-size: 2em;
