--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -227,24 +227,6 @@
   .h5p-hub-icon-plus:before {
     content: "\e939";
   }
-
-  button {
-    font-size: .917em;
-    border-width: .125em;
-    border-radius: .208em;
-    padding: .833em 1.65em;
-    background: #fff;
-    color: #3c4859;
-    font-family: Nunito, sans-serif;
-    outline: none;
-    transition: all 0.1s;
-
-    &:hover {
-      color: #3c4859;
-      background: #e2e5ee;
-      border-color: #e2e5ee;
-    }
-  }
 }
 
 .h5p-hub-registration-wrapper {
@@ -257,4 +239,9 @@
 
 .h5p-hub-share-error {
   margin: 2em;
+}
+
+*:focus {
+  border-color: #186df7 !important;
+  box-shadow: inset 0 1px 1px #00000014, 0 0 8px #186df799 !important;
 }
