JI-4380 update fril <button /> to <Button />

--- a/src/components/generic/button/Button.scss
+++ b/src/components/generic/button/Button.scss
@@ -20,7 +20,7 @@
     background: #e2e5ee;
   }
 
-  &--add {
+  &--rounded {
     border-radius: 1.5em;
     position: absolute;
     right: 4.5em; 
