--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -242,6 +242,6 @@
 }
 
 *:focus {
-  border-color: #186df7 !important;
-  box-shadow: inset 0 1px 1px #00000014, 0 0 8px #186df799 !important;
+  border-color: #186df7;
+  box-shadow: inset 0 1px 1px #00000014, 0 0 8px #186df799;
 }
