JI-4380 fix font-size and outline to work in h5pcom

--- a/src/components/generic/button/Button.scss
+++ b/src/components/generic/button/Button.scss
@@ -9,6 +9,7 @@
   padding: 0.75em 2em;
   cursor: pointer;
   font-weight: bold;
+  outline: none !important;
 
   &:before {
     font-weight: normal;
