--- a/src/components/generic/button/Button.scss
+++ b/src/components/generic/button/Button.scss
@@ -1,15 +1,16 @@
-.h5p-hub-publish,
-.h5p-hub-registration {
-  button {
-    font-family: "Open Sans", sans-serif;
-    font-size: 0.75em;
+.h5p-hub-publish, .h5p-hub-registration, .h5p-hub-navigation {
+  .btn {
     background: transparent;
-    padding: 0.75em 2em;
     color: #757575;
-    border-radius: 3em;
     border: 1px solid #d6d6d6;
+    border-radius: .208em;
+    outline: none;
+    transition: all 0.1s;
+    font-family: "Open Sans", sans-serif;
+    padding: 0.75em 2em;
     cursor: pointer;
     font-weight: bold;
+    outline: none !important;
 
     &:before {
       font-weight: normal;
@@ -17,22 +18,30 @@
 
     &:hover {
       color: #5f5f5f;
-      border-color: #5f5f5f;
+      border: 1px solid #e2e5ee;
+      background: #e2e5ee;
     }
 
-    &.h5p-hub-contained.h5p-hub-green {
-      background-color: #186df7;
-      color: #fff;
-      border-color: #186df7;
-
-      &:hover {
-        background-color: #2e46a4;
-        border-color: #2e46a4;
-      }
+    &--rounded {
+      border-radius: 1.5em;
+      padding: 0.5em 1em;
     }
 
-    &.h5p-hub-outlined.h5p-hub-green {
-      border-width: 0.125em;
+    &--right {
+      position: absolute;
+      right: 4.5em;
+      margin-right: 0.5em;
+    }
+
+    &[disabled],
+    .disabled {
+      color: #d6d6d6;
+      border-color: #e2e5ee;
+      background-color: white;
+      pointer-events: none;
+    }
+
+    &--blue {
       background-color: white;
       border-color: #186df7;
       color: #186df7;
@@ -49,11 +58,26 @@
         background-color: white;
         pointer-events: none;
       }
+
+      &:focus {
+        border-color: #000000;
+        box-shadow: inset 0 1px 1px #00000014, 0 0 8px #00000099;
+      }
+    }
+    
+    &--contained {
+      background-color: #186df7;
+      color: white;
+
+      &:hover {
+        background-color: #2e46a4;
+        border-color: #2e46a4;
+      }
     }
   }
-}
 
-.h5p-hub-publish .h5p-hub-navigation button {
-  padding: 0.833em;
-  max-width: 10.5em;
+  .h5p-hub-publish .h5p-hub-navigation button {
+    padding: 0.833em;
+    max-width: 10.5em;
+  }
 }
