--- a/src/components/generic/form/Element.scss
+++ b/src/components/generic/form/Element.scss
@@ -44,7 +44,10 @@
         font-style: italic;
       }
     }
+    
     .h5p-hub-link-button {
+      cursor: pointer;
+      background: none;
       border: none;
       text-decoration: underline;
       text-align: right;
@@ -53,7 +56,12 @@
       font-size: .917em;
       font-weight: normal;
       padding: 0;
+
+      &:focus {
+        box-shadow: 0 0 1px 1px #186df7;
+      }
     }
+
     .h5p-hub-details-row {
       display: flex;
       align-content: center;
@@ -66,15 +74,8 @@
     select {
       padding: .958em;
       border: 2px solid #e2e5ee;
-      box-shadow: none;
       color: #3c4859;
       font-family: Nunito, sans-serif;
-
-      &:focus {
-        border-color: #98cbe8;
-        box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(152, 203, 232, .6);
-        outline: none;
-      }
     }
   }
 
