JI-4380 UX review: fix font family and padding button and accordion button

--- a/src/components/generic/accordion/Accordion.scss
+++ b/src/components/generic/accordion/Accordion.scss
@@ -24,6 +24,9 @@
     width: 100%;
     justify-self: start;
     display: flex;
+    font-size: .917em;
+    background: white;
+    font-weight: bold;
 
     .h5p-hub-accordion-header {
       border: none;
